# microservice-send-email

./: README.md  main.py  pyproject.toml  test-send-email.py
project/: service.py  settings.py
